resolved issue by changing z-index value of background

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0px;
+  z-index: -1;
 }
 
 .form-control {
